Moved consultant page to static html and js to script directory

--- a/public/consultant.html
+++ b/public/consultant.html
@@ -2,7 +2,7 @@
 <html ng-app xmlns="http://www.w3.org/1999/html">
     <head>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
-      <script src="consultant.js"></script>
+      <script src="script/consultant.js"></script>
     </head>
     <body>
         <div ng-controller="ConsultantController">
