--- a/public/timecards.html
+++ b/public/timecards.html
@@ -12,6 +12,7 @@
             <tr>
                 <th><a href="#/timecards">Timecard Summary</a></th>
                 <th><a href="#/enter_time">Enter Time</a></th>
+                <th><a href="#/monthly_report">Monthly Report</a></th>
             </tr>
         </table>
     </div>
