--- a/public/timecards.html
+++ b/public/timecards.html
@@ -13,6 +13,7 @@
                 <th><a href="#/timecards">Timecard Summary</a></th>
                 <th><a href="#/enter_time">Enter Time</a></th>
                 <th><a href="#/monthly_report">Monthly Report</a></th>
+                <th><a href="#/configuration">Configuration</a></th>
             </tr>
         </table>
     </div>
