--- a/public/consultant.html
+++ b/public/consultant.html
@@ -19,22 +19,46 @@
                   <td><label>First Billable Date</label><input type=date ng-model="new_consultant.first_billable_date"/></td>
                   <td><label>Rolloff Date</label><input type=date ng-model="new_consultant.rolloff_date"/></td>
                 </tr>
+                  <tr>
+                      <td>
+                          <label>Project</label>
+                          <select ng-model="new_consultant.project">
+                              <option ng-repeat="project in projects">{{project}}</option>
+                          </select>
+                      </td>
+                      <td>
+                          <label>Grade</label>
+                          <select ng-model="new_consultant.grade">
+                              <option ng-repeat="grade in grades">{{grade}}</option>
+                          </select>
+                      </td>
+                  </tr>
               </table>
             <input class="btn-primary" type=submit value="Add"/>
             </form>
             <hr/>
             <table>
-              <tr><th>ID</th><th>Last Name</th><th>First Name</th><th>Beeline GUID</th><th>First Billable Date</th><th>Rolloff Date</th><th>Total Hours Worked</th><th>Total Hours Submitted</th></tr>
-              <tr ng-repeat="consultant in consultants">
-                <td>{{consultant.id}}</td>
-                <td>{{consultant.last_name}}</td>
-                <td>{{consultant.first_name}}</td>
-                <td><a href="consultant/detail#?beeline_guid={{consultant.beeline_guid}}">{{consultant.beeline_guid}}</a></td>
-                <td>{{consultant.first_billable_date}}</td>
-                <td>{{consultant.rolloff_date}}</td>
-                <td>{{consultant.total_hours_worked}}</td>
-                <td>{{consultant.total_hours_submitted}}</td>
-              </tr>
+                <tr>
+                    <th>ID</th>
+                    <th>Last Name</th>
+                    <th>First Name</th>
+                    <th>Beeline GUID</th>
+                    <th>First Billable Date</th>
+                    <th>Rolloff Date</th>
+                    <th>Project</th>
+                    <th>Grade</th>
+                </tr>
+                <tr ng-repeat="consultant in consultants">
+                    <td>{{consultant.id}}</td>
+                    <td>{{consultant.last_name}}</td>
+                    <td>{{consultant.first_name}}</td>
+                    <td><a href="consultant/detail#?beeline_guid={{consultant.beeline_guid}}">{{consultant.beeline_guid}}</a>
+                    </td>
+                    <td>{{consultant.first_billable_date}}</td>
+                    <td>{{consultant.rolloff_date}}</td>
+                    <td>{{consultant.project}}</td>
+                    <td>{{consultant.grade}}</td>
+                </tr>
             </table>
         </div>
     </body>
