Upgraded to latest unstable AngularJS to get some new features.

--- a/public/timecards.html
+++ b/public/timecards.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="Timecards">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
     <script src="script/timecards.js"></script>
     <title>CatHerd Timecards</title>
 </head>
