--- a/public/timecards.html
+++ b/public/timecards.html
@@ -4,15 +4,9 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
     <script src="script/timecards.js"></script>
+    <link rel="stylesheet" href="css/timecards.css">
     <title>CatHerd Timecards</title>
 </head>
-<style>
-    div
-    {
-        font-family: "Open Sans", "Microsoft YaHei", "微软雅黑", "Hiragino Sans GB", "Hiragino Sans GB W3", "Helvetica Neue", Arial, sans-serif;
-        font-size: 8pt;
-    }
-</style>
 <body>
     <div>
         <table>
